crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_label.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Id,
            String(
                "sel-label",
            ),
        ),
        (
            For,
            String(
                "sel-trigger",
            ),
        ),
    ],
    styles: [],
}
