crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_positioner.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.positioner_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
    ],
    styles: [],
}
