crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_root_open_invalid.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-invalid",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
    ],
    styles: [],
}
