crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_trigger_multi_active.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
        (
            Aria(
                ActiveDescendant,
            ),
            String(
                "sel-item-bravo",
            ),
        ),
        (
            Aria(
                AutoComplete,
            ),
            String(
                "none",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "listbox",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "sel-label",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "sel-content",
            ),
        ),
        (
            Aria(
                Description,
            ),
            String(
                "1 option selected",
            ),
        ),
        (
            Id,
            String(
                "sel-trigger",
            ),
        ),
        (
            Role,
            String(
                "combobox",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
