crates/ars-components/src/selection/select/snapshots/ars_components__selection__select__tests__select_value_text_selected.snap
---
source: crates/ars-components/src/selection/select/mod.rs
expression: snapshot_attrs(&api.value_text_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "value-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "select",
            ),
        ),
    ],
    styles: [],
}
